--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard && DEBUG=utils nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,16 +18,17 @@
   },
   "homepage": "https://github.com/shailesh-kanzariya/xplore-events#readme",
   "dependencies": {
+    "apollo-datasource": "^0.6.3",
+    "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.3",
-    "graphql": "^14.5.6"
+    "graphql": "^14.5.6",
+    "isemail": "^3.2.0"
   },
   "devDependencies": {
-    "eslint": "^6.4.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "nodemon": "^1.19.2"
+    "debug": "^4.1.1",
+    "dotenv": "^8.1.0",
+    "nodemon": "^1.19.2",
+    "standard": "^14.3.1",
+    "winston": "^3.2.1"
   }
 }
