--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.3",
     "graphql": "^14.5.6",
-    "isemail": "^3.2.0"
+    "isemail": "^3.2.0",
+    "nodemon": "^1.19.2",
+    "dotenv": "^8.1.0",
+    "debug": "^4.1.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "debug": "^4.1.1",
-    "dotenv": "^8.1.0",
-    "nodemon": "^1.19.2",
-    "standard": "^14.3.1",
-    "winston": "^3.2.1"
+    "standard": "^14.3.1"
   }
 }
