--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "apollo-datasource": "^0.6.3",
     "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.3",
+    "aws-sdk": "^2.542.0",
+    "debug": "^4.1.1",
+    "dotenv": "^8.1.0",
     "graphql": "^14.5.6",
     "isemail": "^3.2.0",
     "nodemon": "^1.19.2",
-    "dotenv": "^8.1.0",
-    "debug": "^4.1.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
